chore: Postgres 로컬 개발 환경 구성

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ ELEVENLABS_VOICE_ID_BRIGHT=
 ELEVENLABS_VOICE_ID_CLEAR=
 ELEVENLABS_VOICE_ID_CALM=
 ELEVENLABS_VOICE_ID_WARM=
+
+# DB
+DATABASE_URL=
