--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
+    "pg": "^8.16.3",
+    "prisma": "^7.1.0",
     "socket.io": "^4.8.1",
     "twilio": "^5.10.7",
     "uuid": "^13.0.0",
