chore: docker-compose DB 환경변수 적용

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,11 @@ ELEVENLABS_VOICE_ID_WARM=
 
 # DB
 DATABASE_URL=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=
+POSTGRES_HOST=
+
+# Prisma URL
+DATABASE_URL=
