--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
     "socket.io": "^4.8.1",
