chore: .env 중복 변수 제거 및 주석 정리

--- a/.env.example
+++ b/.env.example
@@ -37,9 +37,7 @@ POSTGRES_DB=
 POSTGRES_PORT=
 POSTGRES_HOST=
 
-# Prisma URL
-DATABASE_URL=
-
+# Google OAuth / 로그인 세션
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
