--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-# 서버 기본 설정
+# Server
 PORT=3003
 PUBLIC_HOST=
 SERVER_URL=
 
-# Twilio 설정
+# Twilio
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_API_KEY=
@@ -11,25 +11,25 @@ TWILIO_API_SECRET=
 TWILIO_TWIML_APP_SID=
 TWILIO_FROM_NUMBER=
 TWILIO_CALLER_ID=
-TWILIO_MEDIA_STREAM_URL=
+TWILIO_MEDIA_STREAM_URL=    # (선택) 기본적으로 PUBLIC_HOST 기반 동작
 
-# STT(Azure) / LLM(Gemini)
+# STT / LLM
 AZURE_SPEECH_KEY=
 AZURE_SPEECH_REGION=
 GEMINI_API_KEY=
 
-# ElevenLabs 설정
+# ElevenLabs
 ELEVENLABS_API_KEY=
 ELEVENLABS_MODEL_ID=
 ELEVENLABS_VOICE_ID=
 
-# ElevenLabs 프리셋 보이스
+# ElevenLabs Voice Presets
 ELEVENLABS_VOICE_ID_BRIGHT=
 ELEVENLABS_VOICE_ID_CLEAR=
 ELEVENLABS_VOICE_ID_CALM=
 ELEVENLABS_VOICE_ID_WARM=
 
-# DB
+# Database
 DATABASE_URL=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
@@ -37,7 +37,7 @@ POSTGRES_DB=
 POSTGRES_PORT=
 POSTGRES_HOST=
 
-# Google OAuth / 로그인 세션
+# Auth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
